--- a/packages/radio-button/radio-button.scss
+++ b/packages/radio-button/radio-button.scss
@@ -45,8 +45,7 @@ $radio-button-color: $svart;
     @include reset-outline;
     cursor: pointer;
     display: flex;
-    align-items: center;
-    height: $radio-button-height;
+    min-height: $radio-button-height;
 
     &__input {
         /* hide default radio button */
@@ -124,14 +123,14 @@ $radio-button-color: $svart;
 
     &__label {
         @include jkl-text-style("desktop/body");
+        display: table;
+        margin-bottom: rem(15px);
     }
 
     &--inline {
         display: inline-flex;
-        & + & {
-            margin-top: unset;
-            margin-left: $component-spacing--xl;
-        }
+        margin-top: unset;
+        margin-left: $component-spacing--xl;
     }
 
     &--error {
@@ -158,7 +157,7 @@ $radio-button-color: $svart;
     }
 
     @include compact-mode {
-        height: $radio-button-height--compact;
+        min-height: $radio-button-height--compact;
 
         .jkl-radio-button__label {
             @include jkl-text-style("compact/body");
@@ -176,7 +175,7 @@ $radio-button-color: $svart;
     }
 
     @include small-device {
-        height: $radio-button-height--compact;
+        min-height: $radio-button-height--compact;
 
         .jkl-radio-button__label {
             @include jkl-text-style("compact/body");
