--- a/packages/checkbox/checkbox.scss
+++ b/packages/checkbox/checkbox.scss
@@ -54,6 +54,8 @@ $checkbox-background-color--error: $feil;
         position: relative;
         height: $checkbox-box-size;
         width: $checkbox-box-size;
+        margin-top: rem(12px);
+        margin-bottom: rem(12px);
 
         margin-right: $component-spacing--small;
         vertical-align: middle;
@@ -102,8 +104,7 @@ $checkbox-background-color--error: $feil;
 
     // The label text
     &__check-text {
-        margin-top: rem(-3px);
-        margin-bottom: rem(12px);
+        margin-top: rem(8px);
     }
 
     &__label {
@@ -207,6 +208,9 @@ $checkbox-background-color--error: $feil;
             height: $checkbox-box-size--compact;
             width: $checkbox-box-size--compact;
         }
+        .jkl-checkbox__check-text {
+            margin-top: rem(10px);
+        }
     }
 
     @include small-device {
@@ -216,6 +220,9 @@ $checkbox-background-color--error: $feil;
         .jkl-checkbox__check-mark {
             height: $checkbox-box-size--compact;
             width: $checkbox-box-size--compact;
+        }
+        .jkl-checkbox__check-text {
+            margin-top: rem(10px);
         }
     }
 }
