docs(logo doc improved): logo doc improved
affects: @fremtind/portal

ISSUES CLOSED: #1027

--- a/portal/src/components/DoDontExample/DoDontExample.scss
+++ b/portal/src/components/DoDontExample/DoDontExample.scss
@@ -20,8 +20,7 @@
         max-width: rem(420px);
     }
 
-    &__image,
-    & img {
+    &__image {
         width: 100%;
         margin-bottom: $component-spacing--large;
     }
