--- a/portal/src/components/DownloadAsset/DownloadAsset.scss
+++ b/portal/src/components/DownloadAsset/DownloadAsset.scss
@@ -7,7 +7,7 @@
     &--dark-bg {
         background-color: black;
     }
-    &--image {
+    &__image {
         width: rem(300px);
         height: auto;
         &:hover {
