--- a/portal/src/components/DownloadAsset/DownloadAsset.scss
+++ b/portal/src/components/DownloadAsset/DownloadAsset.scss
@@ -14,7 +14,7 @@
             cursor: pointer;
         }
     }
-    &--name {
+    &__name {
         padding: rem(16px);
         display: block;
         &-dark {
