--- a/portal/src/components/DownloadAsset/DownloadAsset.scss
+++ b/portal/src/components/DownloadAsset/DownloadAsset.scss
@@ -21,7 +21,7 @@
             color: white;
         }
     }
-    &--button {
+    &__button {
         background: none;
         box-shadow: 0px 0px 0px transparent;
         border: 0px solid transparent;
