--- a/portal/src/components/DownloadAsset/DownloadAsset.scss
+++ b/portal/src/components/DownloadAsset/DownloadAsset.scss
@@ -17,7 +17,7 @@
     &__name {
         padding: rem(16px);
         display: block;
-        &-dark {
+        &--dark {
             color: white;
         }
     }
