--- a/portal/src/components/Grid/Grid.scss
+++ b/portal/src/components/Grid/Grid.scss
@@ -8,7 +8,7 @@
         max-width: rem(894px);
     }
 
-    &--col {
+    &__col {
         margin: $layout-spacing--small;
         flex: 1;
         &:first-child {
