docs(profile): update color docs to use new util classes
affects: @fremtind/portal

--- a/portal/src/components/Documentation/Colors/ColorDescription.scss
+++ b/portal/src/components/Documentation/Colors/ColorDescription.scss
@@ -50,8 +50,13 @@
         top: $component-spacing--medium;
     }
 
-    &__light-color:before {
-        content: "Lys bakgrunn";
+    &__light-color {
+        color: $svart;
+        background-color: $hvit;
+
+        &:before {
+            content: "Lys bakgrunn";
+        }
     }
 
     &__dark-color {
